[package]
name = "bevy_obj"
version = "0.5.1"
authors = ["Csányi István <csanyistvan02@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Wavefront .obj mesh asset loader plugin"
repository = "https://github.com/AmionSky/bevy_obj"
readme = "README.md"

[dependencies]
bevy_app = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix", version = "0.5"}
bevy_asset = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix", version = "0.5"}
bevy_render = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix", version = "0.5"}
bevy_utils = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix", version = "0.5"}
anyhow = "1.0"
thiserror = "1.0"
obj-rs = { version = "0.6", default-features = false }

[dev-dependencies]
bevy = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix", version = "0.5"}

[patch.crates-io]
bevy = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix"}
bevy_app = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix"}
bevy_render = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix"}
bevy_utils = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix"}
bevy_asset = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix"}

[[example]]
name = "render_obj"
path = "example/render_obj.rs"
